2023-07-11 Sam Mulvey
	* Removed OCaml bindings

2022-12-14 Sam Mulvey
	* 4.17.0-1

2022-11-14 Sam Mulvey
	* 4.16.3-pre 
	* moved to stable git repo
	* qemu moved to separate package

2022-05-16 Sam Mulvey
	* 4.16.1-1
	* Version increment
	* Numerous GCC12 hacks

2022-02-15 Sam Mulvey
	* 4.16.0-3
	* forgot to wrap qemu subpackage in an if

2022-02-06 Sam Mulvey
	* 4.16.0-2
	* security patches
	* qemu and stubdom now generate split packages

2021-12-28 Sam Mulvey
	* 4.16.0-1
	* simple bump

2021-09-28 Sam Mulvey
	* 4.15.1-1
	* no patches at all, compiles cleanly

2021-09-09 Sam Mulvey
	* 4.15.0-4
	* adds a PVH security patch

2021-08-28 Sam Mulvey
	* 4.15.0-3
	* EFI fixes
	* continued GCC11 changes
	* XSA: 379 380 382 383

2021-04-15 Sam Mulvey
	* 4.15.0-1
	* stubdom build now defaults false

2021-01-12 Sam Mulvey
	* 4.14.1-1

2020-11-10 Sam Mulvey
	* 4.14.0-4
	re-added XSA patch file handling

2020-08-10 Sam Mulvey
	* 4.14.0-1
	option to build own QEMU is added, and default

2020-08-20 Sam Mulvey
	* 4.13.1-4

2019-08-15 Maik Broemme
	* 4.12.1-1
	Xen 4.12.1

2019-04-29 Maik Broemme
	* 4.12.0-1
	Xen 4.12.0

2018-07-24 Maik Broemme
	* 4.11.0-2
	Updated version in 'xen.install' file

2018-07-12 Maik Broemme
	* 4.11.0-1
	Xen 4.11.0

2018-05-15 Maik Broemme
	* 4.10.1-3
	Apply XSA patches: 260 261 262

2018-05-15 Maik Broemme
	* 4.10.1-2
	Fix compilation issue with gcc-8

2018-05-08 Maik Broemme
	* 4.10.1-1
	Xen 4.10.1

2018-05-03 Maik Broemme
	* 4.10.0-6
	Replace 'mingw-w64-binutils' with 'binutils'

2018-05-03 Maik Broemme
	* 4.10.0-5
	Fix missing path of '--with-system-ovmf' parameter
	Fix compilation issue with glibc-2.27
	Apply XSA patches: 258

2018-04-11 Maik Broemme
	* 4.10.0-4
	PKGBUILD cleanup
	Update ipxe to latest version
	Align dependencies between qemu-xen and qemu-xen-traditional
	Remove no longer needed '-Werror' fixes

2018-04-09 Maik Broemme
	* 4.10.0-3
	Fix '(XEN) parameter "/boot/xen-4.10.0.gz" unknown!' issue

2018-04-09 Maik Broemme
	* 4.10.0-2