@@ -1,3 +1,6 @@
+2023-09-25
+	* stubdom patch fix
+
 2023-07-11 Sam Mulvey
 	* Removed OCaml bindings
 
